#1588-CleanCode fixed code smell line 222